[package]
name = "dash2html"
description = "Tool to generate a HTML page of Dash snippets so they can shared."
readme = "README.md"
repository = "https://github.com/wezm/dash2html"
documentation = "https://github.com/wezm/dash2html"
version = "1.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
license = "MIT"
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]
rusqlite = "0.6.0"
regex = "0.1.43"
